lox-tests/tests/while/fun_in_body.stderr
ERROR: at 'fun': Expected expression, got Fun
 --> 2:14
  |
2 | while (true) fun foo() {}
  |              ^-^
